fix text-align of posts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -187,6 +187,10 @@
     font-size: 24px;
 }
 
+p {
+    text-align: justify;
+}
+
 
 
 /**
